# multi-wallet-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
scripts/: check  lint
src/: server.py
src/api/: __init__.py
src/api/v1/: __init__.py  deps.py
src/api/v1/endpoints/: auth.py  transaction.py  urls.py  users.py  wallet.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/db/: init_db.py
src/models/: __init__.py  exchange_rate.py  transaction.py  url.py  user.py  wallet.py
src/schemas/: __init__.py  pagination.py  transaction.py  user.py  wallet.py
src/services/: transaction.py  wallet.py
src/utils/: exchange_rate.py  pagination.py
